# research-tools

./: .env.example  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
scripts/: install-macos.sh  install-windows.ps1
src/research_tools/: __init__.py  config.py  output.py
src/research_tools/cli/: devto.py  google.py  main.py  reddit.py  youtube.py
src/research_tools/mcp/: __init__.py  server.py
src/research_tools/serper/: __init__.py  client.py
src/research_tools/sources/: __init__.py  base.py  devto.py  reddit.py  serper.py  youtube.py
