[project]
name = "research-tools"
version = "0.1.0"
description = "CLI toolkit for dev.to, Google/Serper, and Reddit research"
readme = "README.md"
authors = [
    { name = "halilc4", email = "halilc4@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "cyclopts>=3.0.0",
    "sqlmodel>=0.0.22",
]

[project.scripts]
rt = "research_tools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_tools"]
